implement xds tdd route, get template from repo